testsuite/tests/quotation/type_variable_eval.compilers.reference
File "type_variable_eval.ml", line 10, characters 40-41:
10 | let variable_eval (type a) () = [%eval: a]
                                             ^
Error: Identifier "a" is used at File "type_variable_eval.ml", line 10, characters 40-41,
       inside a quotation (<[ ... ]>);
       it is introduced at File "type_variable_eval.ml", line 10, characters 24-25,
       outside any quotations.
